[package]
name = "pi_res"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[dependencies]
pi_slab = { path = "../pi_slab"}
pi_deque = {path = "../pi_deque"}
pi_lru = {path = "../pi_lru"}
pi_any = {path="../pi_any"}
# share_rc = { package = "share", path = "../share", features=["rc"], optional = true }
# share_arc = { package = "share", path = "../share", optional = true }
pi_share = { path = "../pi_share", optional = true}
log="*"

pi_hash = {path="../pi_hash"}
pi_atom = {path="../pi_atom"}

[features]
default = ["share"]
rc = ["share/rc"]



# [dependencies.web-sys]
# version = "*"
# features = [
# 	"console",
# ]
# [features]
# default = []
# rc = ["share/rc"]
