[package]
name = "pi_res"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"
description = "Resource Manager"
repository = "https://github.com/GaiaWorld/pi_res.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "res_mgr", "pi_res"]

[dependencies]
pi_slab = "0.1"
pi_deque = "0.1"
pi_lru = "0.1"
pi_any = "0.1"
pi_share = { version = "0.1", optional = true}
log="0.4"

pi_hash = "0.1"
pi_atom = "0.1"

[features]
default = ["pi_share"]
rc = ["pi_share/rc"]
